--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,12 @@ html {
 .right {
     float: right;
 }
+.clear {
+    clear: both;
+}
+.img-circle {
+    border-radius: 50%;
+}
 
 body {
     margin: 0px;
@@ -74,13 +80,11 @@ a:hover {
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,0));/* Standard syntax */
     border-radius: 0px;
     padding-bottom: 10px;
+    border: none;
 }
 
 .navbar.scrolled {
-     //
-     IE
-    background: rgba(0, 0, 0, 0.78); //
-     NON-IE;
+    background: rgba(0, 0, 0, 0.78);
      background-color: rgb(51, 52, 71);
      border-bottom: 1px solid grey;
      box-shadow: 0 3px 3px rgba(0,0,0,0.3);
@@ -100,7 +104,8 @@ a:hover {
 }
 
 .navbar-item {
-    margin-right: 40px;
+    margin-right: 60px;
+    color: white;
 }
 .cover-overlay {
     position: absolute;
@@ -135,10 +140,59 @@ a:hover {
 #about {
     padding-top: 100px;
     padding-bottom: 100px;
+    overflow: auto;
 }
 
 .section-title {
     font-size: 36px;
     font-style: italic;
     font-weight: 800;
+}
+#experience {
+    overflow: auto;
+    background: rgb(51, 52, 71);
+    color: white;
+    padding: 100px;
+}
+
+.experience-container {
+    overflow: auto;
+}
+
+.experience-image {
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.col-centered{
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+    vertical-align: middle;
+}
+.personal-picture {
+    width: 400px;
+}
+.experience-text {
+    vertical-align: top;
+}
+.nonvisible {
+    visibility: hidden;
+}
+.experience-title {
+    font-size: 30px;
+    border-bottom: 1px solid grey;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.experience-info {
+    line-height: 2;
+    font-size: 16px;
+}
+.experience-row {
+    margin-bottom: 100px;
 }
