--- a/static/css/style.css
+++ b/static/css/style.css
@@ -236,3 +236,102 @@ a:hover {
     background: -moz-linear-gradient(90deg, rgba(11, 72, 107, 0.4), rgba(245, 98, 23, 0.5));/* For Firefox 3.6 to 15 */
     background: linear-gradient(90deg,rgba(11, 72, 107, 0.4), rgba(245, 98, 23, 0.5));/* Standard syntax */
 }
+.contact-container {
+    width: 700px;
+    text-align: center;
+}
+
+#contact {
+    background: rgb(51, 52, 71);
+    background: -webkit-linear-gradient(rgb(51, 52, 71), black);
+}
+input[type="text"] {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+input[type="email"] {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+textarea {
+    width: 300px;
+    margin-bottom: 10px;
+}
+.contact-title {
+    color: white;
+    font-size: 36px;
+    text-align: center;
+    width: 140px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+.footer {
+    width: 100%;
+    background: black;
+}
+
+.footer-item {
+    display: inline-block;
+    width: 40px;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.footer-container {
+    width: 170;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+.footer-item:hover {
+    opacity: 0.5;
+}
+.copyright {
+    color: white;
+    text-align: center;
+    padding-bottom: 20px;
+    margin-top: 20px;
+}
+.contact-title-background {
+    background: url(/static/images/dc.jpg) no-repeat center left fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+}
+.contact-title-content {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    font-size: 36px;
+    z-index: 11;
+    color: white;
+}
+.contact-section-title {
+    overflow: auto;
+    position: relative;
+    height: 200px;
+    margin-bottom: 150px;
+}
+.contact-title-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
