--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,17 +90,16 @@ a:hover {
      box-shadow: 0 3px 3px rgba(0,0,0,0.3);
 }
 .hero-content {
-    width: 700px;
-    text-align: center;
-    padding-top: 150px;
-    color: white;
+    width: 800px;
+    text-align: left;
     z-index: 10;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
-    left: 0;
-    right: 0;
+    left: 100;
+    top: 200;
     font-weight: 800;
+    color: #1C181D;
 }
 
 .navbar-item {
@@ -114,8 +113,9 @@ a:hover {
     width: 100%;
     height: 100%;
     background: rgba(28, 216, 210, 0.45);
-    background: -webkit-linear-gradient(to left, rgba(28, 216, 210, 0.45), rgba(147, 237, 199, 0.45)); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, rgba(239, 239, 187, 0.3), rgba(212, 211, 221, 0.5)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to left, rgba(28, 216, 210, 0.45), rgba(147, 237, 199, 0.45));
+    background: linear-gradient(to left, rgba(239, 239, 187, 0.3), rgba(212, 211, 221, 0.5));
+
 }
 
 .hero-title {
@@ -210,6 +210,30 @@ a:hover {
     height: 200px;
     position: absolute;
 }
+
+.education-title-background {
+    background: url(/static/images/lse-cover.jpg) no-repeat center left fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+}
+.education-title-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    /*background: rgba(11, 72, 107, 0.4);
+    background: -webkit-linear-gradient(90deg, rgba(11, 72, 107, 0.4), rgba(245, 98, 23, 0.5));
+    background: -o-linear-gradient(90deg, rgba(11, 72, 107, 0.4), rgba(245, 98, 23, 0.5));*/
+    background: -moz-linear-gradient(90deg, rgba(0,0,0,0), rgba(0,0,0,1));
+    background: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.6));
+}
 .experience-title-content {
     position: absolute;
     top: 100px;
@@ -219,6 +243,7 @@ a:hover {
     margin-right: auto;
     width: 190px;
     z-index: 11;
+    color: white;
 }
 .experience-section-title {
     overflow: auto;
@@ -336,4 +361,12 @@ textarea {
     width: 100%;
     height: 100%;
     z-index: 10;
+}
+section#education {margin-bottom: 150px;}
+#lse-container {
+    text-align: right;
+}
+#education-row {
+    padding-left: 100px;
+    padding-right: 100px;
 }
